# os-test

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  boot.S  boot.cc  boot.s  build.sh  check.sh  common.h  env.sh  fb.cc  fb.h  grub.cfg  install-headers.sh  isr.cc  isr.h  kbd.cc  kbd.h  kernel.c  kernel.cc  kernel.h  linker.ld  macro.h  mem.cc  mem.h  mem_layout.h  mkimg.sh  mkiso.sh  multiboot2.h  run.sh  serial.cc  serial.h  start.S  trapentry.S  (+1 more)
arch/x64/: CMakeLists.txt  ap_trampoline.S  apic.c  apic.cc  apic.h  efi.h  lib.cc  lib.h  memlayout.h  paging.c  paging.cc  paging.h  rdrand.c  rdrand.h  rtc.c  rtc.h  smp.c  smp.cc  smp.h  start.S  trap.c  trap.cc  trap.h  trapentry.S  utils.h  vectors.S
arch/x86/: CMakeLists.txt  boot.cc  lib.cc  lib.h  paging.cc  paging.h  trap.cc  trap.h  trapentry.S  utils.h  vectors.S
boot/: 32bit_print.s  CMakeLists.txt  boot.h  bootsect.s  disk.s  gdt.s  kernel_entry.s  print.s  stub.c  switch_pm.s
common/: boot.h  (+26 more)
kernel/: CMakeLists.txt  acpi.c  acpi.cc  acpi.h  ahci.c  ahci.cc  ahci.h  ata.cc  atomic.h  blk_dev.c  blk_dev.h  devtmpfs.c  devtmpfs.h  display.c  display.h  efi.h  elf.cc  elf.h  elf_loader.c  elf_loader.cc  elf_loader.h  fat32.c  fat32.h  fb.c  fb.cc  fb.h  inode.c  inode.h  kernel.c  kernel.cc  kernel.h  list.h  log.c  log.h  memlayout.h  page_cache.c  page_cache.h  pci.c  pci.cc  pci.h  (+23 more)
kernel/bsd/: CMakeLists.txt  devtmpfs.c  devtmpfs.h  elf_loader.c  elf_loader.h  evdev_broker.c  evdev_broker.h  eventfd.c  eventfd.h  eventpoll.c  eventpoll.h  fat32.c  fat32.h  file_fault.c  file_fault.h  file_lock.c  file_lock.h  file_poll.c  file_poll.h  file_wq.c  fops.c  fops.h  futex.c  futex.h  init.c  inode.c  inode.h  ipcfd.c  ipcfd.h  kfifo.c  kfifo.h  mount.c  mount.h  netlink.c  netlink.h  page_cache.c  page_cache.h  poll_types.h  proc.c  proc.h  (+24 more)
kernel/driver/: CMakeLists.txt  ahci.c  ahci.h  blk_dev.c  blk_dev.h  bsd_types.h  display.c  display.h  driver.h  drm_internal.h  init.c  pci.c  pci.h  registry.c  serial.c  serial.h  virtio_gpu.c  virtio_gpu.h  virtio_pci.c  virtio_pci.h  virtio_ring.c  virtio_ring.h  xhci.c  xhci.h
kernel/mem/: CMakeLists.txt  alloc.c  alloc.cc  alloc.h  copy_user.c  kasan.c  kasan.h  slab.c  slab.cc  slab.h  user_mapping.c  user_mapping.cc
kernel/xcore/: CMakeLists.txt  acpi.c  acpi.h  atomic.h  init.c  ipc.c  kpi.h  list.h  log.c  log.h  mm_types.h  perf.c  perf.h  posix_types.h  random.c  random.h  rbtree.c  rbtree.h  rcu.c  rcu.h  sched.c  sched.h  serial_hook.h  sparse.h  spinlock.h  trap.c  trap.h  wait_queue.c  wait_queue.h  xtask.h
kernel/xcore/mem/: CMakeLists.txt  alloc.c  alloc.h  copy_user.c  extable.h  kasan.c  kasan.h  slab.c  slab.h  user_mapping.c  vma.c  vma.h
os-test/: CMakeLists.txt
os-test/boot/: CMakeLists.txt  bootsect.s  disk.s  mem.s  print_hex.s
os-test/cpu/: CMakeLists.txt  idt.c  idt.h  interrupt.s  isr.c  isr.h  ports.c  ports.h  timer.c
os-test/drivers/: CMakeLists.txt  keyboard.c  keyboard.h  screen.c  screen.h
os-test/init/: CMakeLists.txt  init.c
os-test/kernel/: CMakeLists.txt  kernel.c  kernel.ld  kernel_entry.S  memlayout.h  mmu.h  pmm.c
os-test/kernel/interrupt/: CMakeLists.txt  idt.c  isr.c  isr.h  timer.c
os-test/kernel/mem/: CMakeLists.txt  bfc.c  bfc.h  block.c  block.h  entry.S  memlayout.h  mmu.h  pmm.c  pmm.h  pmm_utils.c
os-test/kernel/process/: process.c  process.h
os-test/libc/: function.h  mem.c  mem.h  string.c  string.h
os-test/utils/: CMakeLists.txt  disk_io.c  disk_io.h  elf.h  os_utils.h  x86.h
user/: CMakeLists.txt  hello.c  hello_dyn.c  libc.map  libm.map  malloctest.c  pthread_test.c  shell.cc  syscall.h  test_pcie.c  writetest.c
user/driver/: display.h  evdev.cc  font.h  kbd_driver.cc  terminal.cc  terminal_libinput.cc
user/include/: alloca.h  assert.h  ctype.h  dirent.h  errno.h  fcntl.h  fnmatch.h  input.h  input_lib.h  inttypes.h  libgen.h  limits.h  math.h  pthread.h  sched.h  setjmp.h  signal.h  stdio.h  stdlib.h  string.h  strings.h  sys.h  syscall.h  termios.h  time.h  unistd.h  usb_hid.h
user/include/linux/: netlink.h
user/include/sys/: block.h  cdefs.h  device.h  epoll.h  eventfd.h  fb.h  ioccom.h  ioctl.h  ipc.h  irq.h  link_map.h  mman.h  mount.h  param.h  pci.h  poll.h  process.h  random.h  resource.h  select.h  serial.h  shm.h  signalfd.h  socket.h  stat.h  sysmacros.h  time.h  timerfd.h  tls.h  types.h  utsname.h  wait.h
user/include/xos/: ringbuf.h
user/ldso/: dl_puts.c  dls3.c  dls_init.c  link_map.c  load_so.c  minilibc.c  relocate.c  start.S  symtab.c
user/lib/: assert.c  atexit.c  crt0.S  ctype.c  dev_ready.c  environ.c  epoll.cc  errno.cc  eventfd.cc  file.cc  fnmatch.c  getrandom.c  init_array.c  input_client.cc  input_driver.cc  io_multiplex.cc  malloc.cc  pthread.cc  select.c  setjmp.S  signal.cc  signalfd.cc  sleep.c  start.cc  start_main.cc  stdio.cc  stdlib_misc.c  string.cc  strtol.c  sys.cc  sys_block.cc  sys_device.cc  sys_fb.cc  sys_ipc.cc  sys_irq.cc  sys_mman.cc  sys_mount.cc  sys_pci.cc  sys_process.cc  sys_serial.cc  (+8 more)
user/lib/evdev-shim/: evdev.c
user/lib/libinput-compat/: compat.c  stubs.c
user/lib/libinput-config/: config.h  libinput-version.h
user/lib/math/: math_basic.c  math_float.c  sincos.c
user/perf/: CMakeLists.txt  perf.cc
user/shell/: shell.cc
user/test/: CMakeLists.txt  drm_test.c  drm_test_link.c  hello_drm_dyn.c  ld_stub_a.c  ld_stub_b.c  ld_test_chain.c  ld_test_cycle.c  ld_test_diamond.c  ld_test_single.c  modetest.c  modetest_dyn.c  test_accept_no_timeout.c  test_clock_cputime.c  test_clock_realtime.c  test_cloexec_perfd.c  test_clone_exit_signal.c  test_clone_settid_fault.c  test_cpu_burn.c  test_dev_vfs.c  test_dev_vfs_dynamic.c  test_dirent_seek.c  test_drm_ioctl.c  test_drm_mode.c  test_epoll.c  test_epoll_oneshot.c  test_evdev.c  test_eventfd.c  test_execve_vfs.c  test_expat.c  test_fcntl.c  test_fcntl_ofd.c  test_ffi.c  test_fpu.c  test_getdents_resume.c  test_getrandom.c  test_helpers.h  test_inode_refcount.c  test_ioctl.c  test_ioctl_varlen.c  (+47 more)
user/udev/: udevd.c
(+266 files in other folders)
