add_subdirectory(boot)
add_subdirectory(drivers)
add_subdirectory(init)
add_subdirectory(kernel)
add_subdirectory(libc)
add_subdirectory(utils)

add_executable(kernel.bin)
target_link_libraries(kernel.bin PRIVATE interrupt drivers kernel utils mem)
target_link_options(kernel.bin PRIVATE -T ${CMAKE_SOURCE_DIR}/os-test/kernel/kernel.ld)
target_link_options(kernel.bin PRIVATE -static)
target_link_options(kernel.bin PRIVATE -N -Wl,--build-id=none)
